# instrat-demand-model

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/clean/: baseline_demand_2019-2021.csv  demand_timeseries;scenario=baseline;sector=Agriculture.csv  demand_timeseries;scenario=baseline;sector=Buildings.csv  demand_timeseries;scenario=baseline;sector=Industry.csv  demand_timeseries;scenario=baseline;sector=Transport.csv  demand_timeseries;scenario=baseline;unit=PJ.csv  demand_timeseries;scenario=baseline;unit=TWh.csv  demand_timeseries;scenario=instrat_ambitious;sector=Agriculture.csv  demand_timeseries;scenario=instrat_ambitious;sector=Buildings.csv  demand_timeseries;scenario=instrat_ambitious;sector=Industry.csv  demand_timeseries;scenario=instrat_ambitious;sector=Transport.csv  demand_timeseries;scenario=instrat_ambitious;unit=PJ.csv  demand_timeseries;scenario=instrat_ambitious;unit=TWh.csv  demand_timeseries;scenario=slow_transformation;sector=Agriculture.csv  demand_timeseries;scenario=slow_transformation;sector=Buildings.csv  demand_timeseries;scenario=slow_transformation;sector=Industry.csv  demand_timeseries;scenario=slow_transformation;sector=Transport.csv  demand_timeseries;scenario=slow_transformation;unit=PJ.csv  demand_timeseries;scenario=slow_transformation;unit=TWh.csv
scripts/: analyze_eurostat_data.py  create_baseline_demand.py  create_demand_timeseries.py  get_eurostat_data.py  upload_to_gsheets.py  visualize_demand_timeseries.py
src/instrat_demand_model/: config.py  download.py  instrat_demand_model.py  io.py
(+13 files in other folders)
