[tool.poetry]
name = "instrat-demand-model"
version = "0.1.0"
description = "Simple model of exogenous demand for various energy carriers"
authors = ["Patryk Kubiczek <patryk.kubiczek@instrat.pl>"]
readme = "README.md"
packages = [{include = "instrat_demand_model"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.0.3"
numpy = "^1.25.2"
plotly = "^5.15.0"
gspread = "^5.10.0"
kaleido = "0.2.1"


[tool.poetry.group.dev.dependencies]
requests = "^2.31.0"
icecream = "^2.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
